[gd_scene load_steps=3 format=2]

[ext_resource path="res://Background.tscn" type="PackedScene" id=1]
[ext_resource path="res://Options/Options.gd" type="Script" id=2]

[node name="Options" type="Control"]
margin_right = 320.0
margin_bottom = 180.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" parent="." instance=ExtResource( 1 )]

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_right = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 140.0
margin_top = 68.0
margin_right = 179.0
margin_bottom = 112.0

[node name="VButtonContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 39.0
margin_bottom = 44.0

[node name="ControlsButton" type="Button" parent="CenterContainer/VBoxContainer/VButtonContainer"]
margin_right = 39.0
margin_bottom = 12.0
text = "Controls"

[node name="SoundButton" type="Button" parent="CenterContainer/VBoxContainer/VButtonContainer"]
margin_top = 16.0
margin_right = 39.0
margin_bottom = 28.0
text = "Sound"

[node name="BackButton" type="Button" parent="CenterContainer/VBoxContainer/VButtonContainer"]
margin_top = 32.0
margin_right = 39.0
margin_bottom = 44.0
text = "Back"
[connection signal="pressed" from="CenterContainer/VBoxContainer/VButtonContainer/ControlsButton" to="." method="_on_ControlsButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/VButtonContainer/BackButton" to="." method="_on_BackButton_pressed"]
